--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
   "name": "mqemitter-redis",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Redis-based MQEmitter",
   "main": "mqemitter-redis.js",
   "dependencies": {
-    "faucet": "^0.0.1",
     "inherits": "^2.0.1",
     "mqemitter": "^0.2.1",
     "redis": "^0.12.1",
     "shortid": "^2.0.1",
-    "lru-cache": "~2.5.0",
+    "lru-cache": "~2.5.0"
+  },
+  "devDependencies": {
+    "faucet": "^0.0.1",
     "tape": "^2.14.0"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "tape test.js | faucet"
   },
