--- a/package.json
+++ b/package.json
@@ -5,18 +5,22 @@
   "main": "mqemitter-redis.js",
   "dependencies": {
     "inherits": "^2.0.1",
-    "mqemitter": "^0.3.0",
+    "mqemitter": "^0.4.0",
     "redis": "^0.12.1",
-    "shortid": "^2.0.1",
-    "lru-cache": "~2.5.0"
+    "shortid": "^2.2.2",
+    "lru-cache": "^2.6.4"
   },
   "devDependencies": {
     "faucet": "^0.0.1",
-    "tape": "^2.14.0"
+    "pre-commit": "^1.0.7",
+    "standard": "^4.0.1",
+    "tape": "^4.0.0"
   },
   "scripts": {
+    "lint": "standard",
     "test": "tape test.js | faucet"
   },
+  "pre-commit": ["lint", "test"],
   "repository": {
     "type": "git",
     "url": "https://github.com/mcollina/mqemitter-redis.git"
