--- a/package.json
+++ b/package.json
@@ -7,27 +7,23 @@
     "inherits": "^2.0.1",
     "ioredis": "^1.13.2",
     "lru-cache": "^4.0.0",
-    "mqemitter": "^1.0.0",
+    "mqemitter": "^2.0.0",
     "msgpack-lite": "^0.1.14",
     "shortid": "^2.2.2"
   },
   "devDependencies": {
     "faucet": "^0.0.1",
     "pre-commit": "^1.0.7",
-    "standard": "^5.4.1",
+    "standard": "^6.0.0",
     "tape": "^4.0.0"
   },
   "optionalDependencies": {
     "hiredis": "^0.4.1"
   },
   "scripts": {
-    "lint": "standard",
-    "test": "tape test.js | faucet"
+    "test": "standard && tape test.js | faucet"
   },
-  "pre-commit": [
-    "lint",
-    "test"
-  ],
+  "pre-commit": "test",
   "repository": {
     "type": "git",
     "url": "https://github.com/mcollina/mqemitter-redis.git"
