replicated from mqemitter 'safe-buffer' as devDeps, npm changed behaviour don't install devDeps recursively

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "faucet": "^0.0.1",
     "pre-commit": "^1.0.7",
+    "safe-buffer": "^5.1.1",
     "standard": "^10.0.2",
     "tape": "^4.0.0"
   },
