--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "4.0.3",
   "description": "Redis-based MQEmitter",
   "main": "mqemitter-redis.js",
+  "types": "types/index.d.ts",
   "dependencies": {
     "hyperid": "^2.0.0",
     "inherits": "^2.0.1",
