--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,14 @@ jobs:
     strategy:
       matrix:
         node-version: [10.x, 12.x, 13.x, 14.x, 16.x]
+        redis-tag: [5, 6]
+
+    services:
+      redis:
+        image: redis:${{ matrix.redis-tag }}
+        ports:
+        - 6379:6379
+        options: --entrypoint redis-server
 
     steps:
       - uses: actions/checkout@v1
