--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [10.x, 12.x, 13.x, 14.x, 16.x]
+        node-version: [10.x, 12.x, 14.x, 16.x]
         redis-tag: [5, 6]
 
     services:
