--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       matrix:
         node-version: [16.x, 18.x, 20.x, 22.x]
-        redis-tag: [5, 6, 7]
+        redis-tag: [5, 6]
 
     services:
       redis:
