--- a/package.json
+++ b/package.json
@@ -5,26 +5,25 @@
   "main": "mqemitter-redis.js",
   "types": "types/index.d.ts",
   "dependencies": {
-    "hyperid": "^3.0.1",
-    "inherits": "^2.0.1",
-    "ioredis": "^5.0.4",
-    "ioredis-auto-pipeline": "^1.0.1",
-    "lru-cache": "^7.9.0",
-    "mqemitter": "^4.1.3",
-    "msgpack-lite": "^0.1.14"
+    "hyperid": "^3.2.0",
+    "inherits": "^2.0.4",
+    "ioredis": "^5.4.1",
+    "ioredis-auto-pipeline": "^1.0.2",
+    "lru-cache": "^10.2.2",
+    "mqemitter": "^6.0.2",
+    "msgpack-lite": "^0.1.26"
   },
   "devDependencies": {
-    "@types/ioredis": "^4.19.4",
-    "faucet": "^0.0.1",
-    "pre-commit": "^1.0.7",
-    "safe-buffer": "^5.1.2",
-    "standard": "^17.0.0",
+    "faucet": "^0.0.4",
+    "pre-commit": "^1.2.2",
+    "safe-buffer": "^5.2.1",
+    "standard": "^17.1.0",
     "tape": "^5.0.1",
-    "tsd": "^0.20.0"
+    "tsd": "^0.31.0"
   },
   "scripts": {
     "test:types": "tsd",
-    "test": "standard && tape test.js | faucet && tsd"
+    "test": "standard && tape test/*.js | faucet && tsd"
   },
   "pre-commit": "test",
   "repository": {
