--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,9 +8,8 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.x, 18.x, 20.x, 22.x]
-        redis-tag: [5, 6]
-
+        node-version: [20.x, 22.x]
+        redis-tag: [7.2, 7.4]
     services:
       redis:
         image: redis:${{ matrix.redis-tag }}
