--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mqemitter-redis",
-  "version": "6.1.0",
+  "version": "7.0.0",
   "description": "Redis-based MQEmitter",
   "main": "mqemitter-redis.js",
   "types": "types/index.d.ts",
@@ -24,7 +24,7 @@
   "scripts": {
     "lint:fix": "eslint --fix",
     "lint": "eslint",
-    "unit": "node --test test/*.js",
+    "unit": "node --test --test-concurrency=1 test/*.js",
     "test:types": "tsd",
     "test": "npm run lint && npm run unit && tsd",
     "redis": "docker run -d --rm --name redis -p 6379:6379 redis:7"
